[package]
name = "dsp-analyze"
version = "0.1.0"
edition = "2021"
authors = [
    "Oliver Rockstedt <info@sourcebox.de>",
    "Nathan Graule <me@solarliner.dev>",
]

[dependencies]
plotters = "0.3.7"
hound = "3.5.1"
realfft = "3.4.0"

[dev-dependencies]
micromath = "2.1.0"

[lints.rust]
missing_docs = "warn"
